[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/tex_color_spectrum.png" type="Texture" id=1]
[ext_resource path="res://scripts/hud/GameTime.gd" type="Script" id=2]
[ext_resource path="res://scenes/hud/ColorIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/lerimama_theme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/screens/GameOver.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/font_gamer_64.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/game/GameCam.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/game/Arena.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/screens/PauseMenu.gd" type="Script" id=10]
[ext_resource path="res://scripts/hud/Hud.gd" type="Script" id=11]
[ext_resource path="res://scripts/Game.gd" type="Script" id=13]
[ext_resource path="res://assets/theme/font_gamer_32_base.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/tileset_hud_icons.png" type="Texture" id=16]
[ext_resource path="res://scripts/hud/LifeIcons.gd" type="Script" id=17]
[ext_resource path="res://scripts/hud/EnergyBar.gd" type="Script" id=18]
[ext_resource path="res://assets/theme/font_gamer_320.tres" type="DynamicFont" id=19]
[ext_resource path="res://scripts/hud/GameCountdown.gd" type="Script" id=20]

[sub_resource type="World" id=117]

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 16 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 16 )
region = Rect2( 36, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 16 )
region = Rect2( 32, 64, 48, 16 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 16 )
region = Rect2( 32, 80, 48, 16 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="Animation" id=136]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Timer/noz:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "05" ]
}

[sub_resource type="Animation" id=135]
resource_name = "countdown_5"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Timer/noz:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "05", "05", "04", "03", "02", "01", "GO", "GO" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1, 6.8, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/Timer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8, 1.9, 2, 2.1, 2.8, 2.9, 3, 3.1, 3.8, 3.9, 4, 4.1, 4.8, 4.9, 5, 5.1, 5.8, 5.9, 6, 6.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 0.368627, 1, 0.662745, 0 ), Color( 0.368627, 1, 0.662745, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_horizontal_guides_": [ 32.0, 332.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="design" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )

[node name="GameView" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 0

[node name="Header" type="ColorRect" parent="GameView"]
margin_right = 1280.0
margin_bottom = 52.0
rect_min_size = Vector2( 1280, 52 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="Viewports" type="HBoxContainer" parent="GameView"]
margin_top = 52.0
margin_right = 1280.0
margin_bottom = 668.0

[node name="ViewportContainer_1" type="ViewportContainer" parent="GameView/Viewports"]
margin_right = 1280.0
margin_bottom = 616.0

[node name="Viewport" type="Viewport" parent="GameView/Viewports/ViewportContainer_1"]
size = Vector2( 1280, 616 )
world = SubResource( 117 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Arena" parent="GameView/Viewports/ViewportContainer_1/Viewport" instance=ExtResource( 9 )]
__meta__ = {
"_edit_horizontal_guides_": [ 44.0, 32.0, 20.0, 64.0, 660.0, 688.0, 676.0, 648.0 ]
}

[node name="GameCam" parent="GameView/Viewports/ViewportContainer_1/Viewport" instance=ExtResource( 7 )]

[node name="Footer" type="ColorRect" parent="GameView"]
margin_top = 668.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 52 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="MinimapContainer" type="ViewportContainer" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 1088.0
margin_top = 80.0
margin_right = 1248.0
margin_bottom = 172.0
size_flags_horizontal = 3

[node name="MinimapViewport" type="Viewport" parent="MinimapContainer"]
size = Vector2( 160, 92 )
world = SubResource( 117 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="MinimapCam" type="Camera2D" parent="MinimapContainer/MinimapViewport"]
current = true
zoom = Vector2( 12.2, 12.2 )
limit_smoothed = true

[node name="GUI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Hud" type="Control" parent="GUI"]
anchor_right = 0.997
anchor_bottom = 0.994
margin_right = 3.84009
margin_bottom = 4.32001
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 11 )

[node name="HudLine_TL" type="HBoxContainer" parent="GUI/Hud"]
margin_left = 31.0
margin_top = 10.0
margin_right = 405.0
margin_bottom = 36.0
custom_constants/separation = 14

[node name="LifeIcons" type="HBoxContainer" parent="GUI/Hud/HudLine_TL"]
margin_right = 52.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
custom_constants/separation = 2
script = ExtResource( 17 )

[node name="LifeIcon" type="Control" parent="GUI/Hud/HudLine_TL/LifeIcons"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 26.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="GUI/Hud/HudLine_TL/LifeIcons/LifeIcon"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="GUI/Hud/HudLine_TL/LifeIcons/LifeIcon"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="LifeIcon2" type="Control" parent="GUI/Hud/HudLine_TL/LifeIcons"]
margin_left = 18.0
margin_top = 8.0
margin_right = 34.0
margin_bottom = 26.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="GUI/Hud/HudLine_TL/LifeIcons/LifeIcon2"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="GUI/Hud/HudLine_TL/LifeIcons/LifeIcon2"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="LifeIcon3" type="Control" parent="GUI/Hud/HudLine_TL/LifeIcons"]
margin_left = 36.0
margin_top = 8.0
margin_right = 52.0
margin_bottom = 26.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8

[node name="OffIcon" type="TextureRect" parent="GUI/Hud/HudLine_TL/LifeIcons/LifeIcon3"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 122 )

[node name="OnIcon" type="TextureRect" parent="GUI/Hud/HudLine_TL/LifeIcons/LifeIcon3"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 123 )

[node name="Life" type="Label" parent="GUI/Hud/HudLine_TL"]
margin_left = 66.0
margin_right = 140.0
margin_bottom = 26.0
text = "LIFE: 0"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="EnergyBar" type="HBoxContainer" parent="GUI/Hud/HudLine_TL"]
margin_left = 154.0
margin_right = 218.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
custom_constants/separation = 8
script = ExtResource( 18 )

[node name="TextureRect7" type="TextureRect" parent="GUI/Hud/HudLine_TL/EnergyBar"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 8
texture = SubResource( 125 )

[node name="TextureProgress" type="TextureProgress" parent="GUI/Hud/HudLine_TL/EnergyBar"]
margin_left = 16.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 8
min_value = -8.0
max_value = 184.0
step = 8.0
value = 176.0
texture_over = SubResource( 126 )
texture_progress = SubResource( 132 )

[node name="Energy" type="Label" parent="GUI/Hud/HudLine_TL"]
margin_left = 232.0
margin_right = 308.0
margin_bottom = 26.0
text = "E: 0000"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="PointsCounter" type="HBoxContainer" parent="GUI/Hud/HudLine_TL"]
margin_left = 322.0
margin_right = 394.0
margin_bottom = 26.0
size_flags_horizontal = 0
custom_constants/separation = 8

[node name="TextureRect4" type="TextureRect" parent="GUI/Hud/HudLine_TL/PointsCounter"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 26.0
rect_min_size = Vector2( 16, 18 )
size_flags_vertical = 8
texture = SubResource( 129 )

[node name="Points" type="Label" parent="GUI/Hud/HudLine_TL/PointsCounter"]
margin_left = 24.0
margin_right = 72.0
margin_bottom = 26.0
size_flags_vertical = 8
text = "0000"
__meta__ = {
"_editor_description_": ""
}

[node name="PickedColor" type="Control" parent="GUI/Hud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -36.0
margin_right = 192.0
margin_bottom = -16.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GUI/Hud/PickedColor"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -26.0
margin_right = 60.0
text = "rGB
"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="GUI/Hud/PickedColor"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 17.0

[node name="Value" type="Label" parent="GUI/Hud/PickedColor"]
modulate = Color( 1, 1, 1, 0.313726 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = -26.0
margin_right = 155.0
text = "255 255 255"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="ColorSpectrum" type="VBoxContainer" parent="GUI/Hud"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -31.0
margin_right = 22.0
margin_bottom = -19.0
grow_horizontal = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="IndicatorHolder" type="HBoxContainer" parent="GUI/Hud/ColorSpectrum"]
margin_right = 44.0
margin_bottom = 12.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 12 )
alignment = 1

[node name="SpectrumColorIndicator3" parent="GUI/Hud/ColorSpectrum/IndicatorHolder" instance=ExtResource( 3 )]
visible = false
margin_left = 32.0
margin_right = 44.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Spectrum" type="TextureRect" parent="GUI/Hud/ColorSpectrum"]
visible = false
margin_top = 20.0
margin_right = 512.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 1

[node name="HudLine_TR" type="HBoxContainer" parent="GUI/Hud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -238.0
margin_top = 10.0
margin_right = -62.0
margin_bottom = 36.0
custom_constants/separation = 22

[node name="Level" type="Label" parent="GUI/Hud/HudLine_TR"]
modulate = Color( 1, 1, 1, 0.313726 )
margin_right = 94.0
margin_bottom = 26.0
text = "LEVEL 00"
align = 2
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="GameTime" type="Control" parent="GUI/Hud/HudLine_TR"]
margin_left = 116.0
margin_right = 176.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 26 )
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Mins" type="Label" parent="GUI/Hud/HudLine_TR/GameTime"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -26.0
margin_right = 24.0
custom_fonts/font = ExtResource( 15 )
text = "00"
valign = 2

[node name="Dots" type="Label" parent="GUI/Hud/HudLine_TR/GameTime"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -25.0
margin_right = 3.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 15 )
text = ":"
align = 1
valign = 2

[node name="Secs" type="Label" parent="GUI/Hud/HudLine_TR/GameTime"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -26.0
custom_fonts/font = ExtResource( 15 )
text = "00"
align = 2
valign = 2

[node name="GameCountdown" type="Control" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 20 )

[node name="Undi" type="ColorRect" parent="GUI/GameCountdown"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.498039 )

[node name="Container" type="VBoxContainer" parent="GUI/GameCountdown"]
margin_left = 523.0
margin_top = 234.0
margin_right = 751.0
margin_bottom = 260.0
custom_constants/separation = 0

[node name="label" type="Label" parent="GUI/GameCountdown/Container"]
modulate = Color( 1, 1, 1, 0.313726 )
margin_right = 228.0
margin_bottom = 26.0
size_flags_vertical = 8
text = "LEVEL 01 START IN ..."
align = 1
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Control" parent="GUI/GameCountdown/Container"]
modulate = Color( 0.368627, 1, 0.662745, 1 )
margin_top = 26.0
margin_right = 228.0
margin_bottom = 26.0
size_flags_vertical = 3

[node name="noz" type="Label" parent="GUI/GameCountdown/Container/Timer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -113.0
margin_top = -2.0
margin_right = 132.0
margin_bottom = 178.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 19 )
text = "05"
align = 1
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/GameCountdown"]
anims/RESET = SubResource( 136 )
anims/countdown_5 = SubResource( 135 )

[node name="PauseGame" type="Control" parent="GUI"]
pause_mode = 2
anchor_right = 0.997
anchor_bottom = 1.0
margin_right = 3.83997
script = ExtResource( 10 )

[node name="Undi" type="Panel" parent="GUI/PauseGame"]
modulate = Color( 0, 0, 0, 0.784314 )
anchor_right = 0.997
anchor_bottom = 1.0
margin_right = 3.83997

[node name="Pause" type="Label" parent="GUI/PauseGame"]
modulate = Color( 0.996078, 0.976471, 0.545098, 1 )
margin_left = 192.0
margin_top = 109.0
margin_right = 576.0
margin_bottom = 160.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Game is paused ..."
align = 1

[node name="Menu" type="VBoxContainer" parent="GUI/PauseGame"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = 225.0
margin_top = 110.0
margin_right = 449.0
margin_bottom = 271.0
__meta__ = {
"_edit_group_": true
}

[node name="PlayBtn" type="Button" parent="GUI/PauseGame/Menu"]
margin_left = 52.0
margin_right = 224.0
margin_bottom = 51.0
focus_mode = 1
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.368627, 1, 0.662745, 1 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 1
text = "PLAY ON"

[node name="RestartBtn" type="Button" parent="GUI/PauseGame/Menu"]
margin_left = 48.0
margin_top = 55.0
margin_right = 224.0
margin_bottom = 106.0
focus_mode = 1
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.341176, 0.65098, 1, 1 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 1
text = "RESTART"

[node name="QuitBtn" type="Button" parent="GUI/PauseGame/Menu"]
margin_top = 110.0
margin_right = 224.0
margin_bottom = 161.0
focus_mode = 1
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 0.196078 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 1
text = "QUIT GAME"

[node name="Controls" type="Control" parent="GUI/PauseGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -17.0
margin_right = 448.0
margin_bottom = 256.0
rect_min_size = Vector2( 640, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="GUI/PauseGame/Controls"]
modulate = Color( 0.32549, 0.356863, 0.407843, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = -1.0
margin_right = 90.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Controls"
align = 1

[node name="Controller" type="Control" parent="GUI/PauseGame/Controls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -187.0
margin_right = 235.0
margin_bottom = 8.0
__meta__ = {
"_edit_group_": true
}

[node name="Controller" type="Label" parent="GUI/PauseGame/Controls/Controller"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 5.0
margin_right = 144.0
margin_bottom = 18.0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "arrows"
autowrap = true

[node name="Text" type="Label" parent="GUI/PauseGame/Controls/Controller"]
margin_top = 37.0
margin_right = 236.0
margin_bottom = 184.0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "UP - move up
DOWN - move down
LEFT - move left
RIGHT - move right
SPACE - change skill"
autowrap = true

[node name="Controller2" type="Control" parent="GUI/PauseGame/Controls"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.5
margin_top = -183.0
margin_right = 113.5
margin_bottom = 8.0
__meta__ = {
"_edit_group_": true
}

[node name="Controller" type="Label" parent="GUI/PauseGame/Controls/Controller2"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 5.0
margin_right = 144.0
margin_bottom = 18.0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "arrows"
autowrap = true

[node name="Text" type="Label" parent="GUI/PauseGame/Controls/Controller2"]
margin_top = 37.0
margin_right = 236.0
margin_bottom = 184.0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "W - move up
S - move down
A - move left
D - move right
SPACE - change skill"
autowrap = true

[node name="Controller3" type="Control" parent="GUI/PauseGame/Controls"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -268.0
margin_top = -183.0
margin_bottom = 8.0
__meta__ = {
"_edit_group_": true
}

[node name="Controller" type="Label" parent="GUI/PauseGame/Controls/Controller3"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 5.0
margin_right = 144.0
margin_bottom = 18.0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "JoyPad"
autowrap = true

[node name="Text" type="Label" parent="GUI/PauseGame/Controls/Controller3"]
margin_top = 37.0
margin_right = 301.0
margin_bottom = 179.0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "JP UP - move up
JP DOWN - move down
JP LEFT - move left
JP RIGHT - move right
JP BTN A - change skill"
autowrap = true

[node name="GameOver" type="Control" parent="GUI"]
pause_mode = 2
visible = false
anchor_right = 0.997
anchor_bottom = 1.0
margin_right = 3.83997
script = ExtResource( 5 )

[node name="Undi" type="Panel" parent="GUI/GameOver"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.997
anchor_bottom = 1.0
margin_right = 3.83997

[node name="Bravo" type="Label" parent="GUI/GameOver"]
modulate = Color( 0.996078, 0.976471, 0.545098, 1 )
margin_left = 193.0
margin_top = 86.0
margin_right = 349.0
margin_bottom = 137.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Bravo!!!"

[node name="Score" type="Label" parent="GUI/GameOver"]
margin_left = 361.0
margin_top = 86.0
margin_right = 777.0
margin_bottom = 137.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Dosegel si %s tock."

[node name="DataContainer" type="VBoxContainer" parent="GUI/GameOver"]
margin_left = 192.0
margin_top = 170.0
margin_right = 388.0
margin_bottom = 256.0
__meta__ = {
"_edit_group_": true
}

[node name="Time" type="Label" parent="GUI/GameOver/DataContainer"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 196.0
margin_bottom = 26.0
text = "TIME USED: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Level" type="Label" parent="GUI/GameOver/DataContainer"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_top = 30.0
margin_right = 196.0
margin_bottom = 56.0
text = "LEVEL REACHED: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Points" type="Label" parent="GUI/GameOver/DataContainer"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_top = 60.0
margin_right = 196.0
margin_bottom = 86.0
text = "POINTS SCORED: 00"
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Menu" type="VBoxContainer" parent="GUI/GameOver"]
pause_mode = 2
margin_left = 712.0
margin_top = 456.0
margin_right = 1088.0
margin_bottom = 617.0
__meta__ = {
"_edit_group_": true
}

[node name="RestartBtn" type="Button" parent="GUI/GameOver/Menu"]
margin_left = 136.0
margin_right = 376.0
margin_bottom = 51.0
focus_mode = 1
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_color = Color( 0.368627, 1, 0.662745, 1 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 1
text = "PLAY AGAIN"

[node name="HighScoreBtn" type="Button" parent="GUI/GameOver/Menu"]
margin_top = 55.0
margin_right = 376.0
margin_bottom = 106.0
focus_mode = 1
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_color = Color( 0.341176, 0.65098, 1, 1 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 1
text = "CHECK HIGH-SCORE"

[node name="QuitBtn" type="Button" parent="GUI/GameOver/Menu"]
margin_left = 76.0
margin_top = 110.0
margin_right = 376.0
margin_bottom = 161.0
focus_mode = 1
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 0.196078 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 1
text = "QUIT TO MENU"

[node name="Title3" type="Label" parent="GUI/GameOver"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -448.0
margin_top = 224.0
margin_right = 84.0
margin_bottom = 478.0
custom_fonts/font = ExtResource( 19 )
text = "GAME"
valign = 2

[node name="Title4" type="Label" parent="GUI/GameOver"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.9999
margin_top = 88.0
margin_right = 455.0
margin_bottom = 342.0
custom_fonts/font = ExtResource( 19 )
text = "OVER"
align = 2
valign = 2

[connection signal="deathmode_on" from="GUI/Hud/HudLine_TR/GameTime" to="GUI/Hud" method="_on_GameTime_deathmode_on"]
[connection signal="gametime_is_up" from="GUI/Hud/HudLine_TR/GameTime" to="GUI/Hud" method="_on_GameTime_gametime_is_up"]
[connection signal="animation_finished" from="GUI/GameCountdown/AnimationPlayer" to="GUI/GameCountdown" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="GUI/PauseGame/Menu/PlayBtn" to="GUI/PauseGame" method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="GUI/PauseGame/Menu/RestartBtn" to="GUI/PauseGame" method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="GUI/PauseGame/Menu/QuitBtn" to="GUI/PauseGame" method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="GUI/GameOver/Menu/RestartBtn" to="GUI/GameOver" method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="GUI/GameOver/Menu/HighScoreBtn" to="GUI/GameOver" method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="GUI/GameOver/Menu/QuitBtn" to="GUI/GameOver" method="_on_QuitBtn_pressed"]
